Added GLAD, reordered project.

--- a/Emulator/PlatformDevEmulator.vcxproj
+++ b/Emulator/PlatformDevEmulator.vcxproj
@@ -19,12 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GLFW\src\glfw.vcxproj">
-      <Project>{a3fff93d-3ce2-4298-8e73-9a392d24b51c}</Project>
-    </ProjectReference>
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ProjectReference Include="..\..\GLFW\src\glfw.vcxproj">
+      <Project>{a3fff93d-3ce2-4298-8e73-9a392d24b51c}</Project>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{9007C103-6E70-4A99-9397-7F9284AADFC1}</ProjectGuid>
@@ -83,7 +83,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>..\GLFW\include\;$(IncludePath)</IncludePath>
+    <IncludePath>..\..\GLFW\include\;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -91,7 +91,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>..\GLFW\include\;$(IncludePath)</IncludePath>
+    <IncludePath>..\..\GLFW\include\;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
