--- a/Emulator/PlatformDevEmulator.vcxproj.filters
+++ b/Emulator/PlatformDevEmulator.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClCompile Include="..\GLAD\src\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Chip8.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Chip8.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
