--- a/Emulator/PlatformDevEmulator.vcxproj.filters
+++ b/Emulator/PlatformDevEmulator.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Chip8.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HashGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
