--- a/Emulator/PlatformDevEmulator.vcxproj.filters
+++ b/Emulator/PlatformDevEmulator.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClInclude Include="Chip8.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="HashGenerator.h">
+    <ClInclude Include="Helpers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
